--- a/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms.csproj
+++ b/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms.csproj
@@ -115,6 +115,7 @@
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="FullCast.aspx" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -127,6 +128,7 @@
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="MovieDetail.aspx" />
+    <Content Include="MovieQueue.aspx" />
     <Content Include="MovieSearch.aspx" />
     <Content Include="PeopleSearch.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -179,6 +181,13 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="FullCast.aspx.cs">
+      <DependentUpon>FullCast.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FullCast.aspx.designer.cs">
+      <DependentUpon>FullCast.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -188,6 +197,13 @@
     </Compile>
     <Compile Include="MovieDetail.aspx.designer.cs">
       <DependentUpon>MovieDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MovieQueue.aspx.cs">
+      <DependentUpon>MovieQueue.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MovieQueue.aspx.designer.cs">
+      <DependentUpon>MovieQueue.aspx</DependentUpon>
     </Compile>
     <Compile Include="MovieSearch.aspx.cs">
       <DependentUpon>MovieSearch.aspx</DependentUpon>
