--- a/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms.csproj
+++ b/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms/MovieDatabase_ASP_WebForms.csproj
@@ -111,6 +111,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="CSS\chosen.min.css" />
     <Content Include="CSS\Styles.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
@@ -134,6 +135,8 @@
     <Content Include="PersonDetail.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\chosen.jquery.min.js" />
+    <Content Include="Scripts\chosen.min.css" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
